feat: Implement new dashboard UI for project and folder management, including pagination, infinite scroll, and i18n.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -21,7 +21,9 @@
         "tours_title": "Tours & Help",
         "settings_tour": "Settings & API Keys",
         "creation_tour": "Creation Tour",
-        "script_tour": "Script Tour"
+        "script_tour": "Script Tour",
+        "preview_tour": "Preview Tour",
+        "export_tour": "Export Tour"
     },
     "folders": {
         "title": "Folders",
@@ -276,15 +278,17 @@
         "preview": {
             "player": "Watch the final result here. The video is assembled in real-time.",
             "controls": "Control playback, pause, and navigate through scenes.",
-            "export_btn": "Click here to export.",
-            "export_btn_instruction": "Click this download button now to open options, then click Next on the tour.",
             "subtitles": "Toggle automatic subtitles on or off.",
-            "resolution": "Choose between 1080p (high quality) or 720p (smaller file).",
-            "export_format_step": "MP4 is more compatible (IG/TikTok). WebM is faster.",
-            "export_resolution_step": "1080p for max quality or 720p for lighter files.",
-            "export_fps_step": "60 FPS for smoother motion. 30 FPS for smaller size.",
-            "export_merge_step": "Append an outro video automatically at the end.",
-            "export_confirm_step": "Click here to request video rendering on the server."
+            "resolution": "Choose between 1080p (high quality) or 720p (smaller file)."
+        },
+        "export": {
+            "welcome": "Welcome to the export tour! Here you'll learn how to export your video with the best settings.",
+            "open_modal": "Click this download button now to open export options, then click Next.",
+            "format_step": "MP4 is more compatible (IG/TikTok). WebM is faster.",
+            "resolution_step": "1080p for max quality or 720p for lighter files.",
+            "fps_step": "60 FPS for smoother motion. 30 FPS for smaller size.",
+            "merge_step": "Append an outro video automatically at the end.",
+            "confirm_step": "Click here to request video rendering on the server."
         }
     }
 }
