feat: add Channels and Persona features with i18n support for project creation.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -425,6 +425,43 @@
         "active": "Active",
         "blocked": "Blocked"
     },
+    "channels": {
+        "title": "Channel Manager",
+        "subtitle": "Manage connected channels & AI personas",
+        "import_existing": "Import Channel",
+        "connect_new": "Connect Channel",
+        "back_to_list": "Back to Channels",
+        "analytics_button": "Analytics",
+        "stats_subs": "subs",
+        "stats_videos": "videos",
+        "stats_views": "views",
+        "all_channels": "All Channels",
+        "view_analytics": "View Analytics",
+        "manage_channel": "Manage Channel",
+        "favorite_channel": "Favorite Channel",
+        "sync_now": "Sync Now",
+        "last_synced": "Last synced:",
+        "analytics_title": "Video Analytics & Insights",
+        "tab_overview": "Overview",
+        "tab_videos": "Videos",
+        "no_videos_title": "No Videos Available",
+        "no_videos_desc": "Unable to load videos for this channel. This could be because:",
+        "no_videos_reason_1": "The channel hasn't been synced yet",
+        "no_videos_reason_2": "The backend endpoint is not configured",
+        "no_videos_reason_3": "The channel has no published videos",
+        "no_videos_found": "No videos found",
+        "check_log": "Check browser console (F12) for detailed error logs",
+        "stat_total_views": "Total Views",
+        "stat_avg_views": "Avg Views",
+        "stat_total_likes": "Total Likes",
+        "stat_engagement": "Engagement",
+        "top_performing": "Top Performing Video",
+        "show_less": "Show less",
+        "show_more": "Show more",
+        "watch": "Watch",
+        "stats_likes": "likes",
+        "stats_comments": "comments"
+    },
     "personas": {
         "library_title": "Persona Library",
         "library_subtitle": "Choose your AI scriptwriter style or chat with them directly",
