--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -449,6 +449,43 @@
         "audio": "Áudio",
         "video": "Vídeo"
     },
+    "channels": {
+        "title": "Gerenciador de Canais",
+        "subtitle": "Gerencie canais conectados e personas de IA",
+        "import_existing": "Importar Canal",
+        "connect_new": "Conectar Canal",
+        "back_to_list": "Voltar para Canais",
+        "analytics_button": "Ver Dados",
+        "stats_subs": "inscritos",
+        "stats_videos": "vídeos",
+        "stats_views": "visualizações",
+        "all_channels": "Todos os Canais",
+        "view_analytics": "Ver Analytics",
+        "manage_channel": "Gerenciar Canal",
+        "favorite_channel": "Canal Favorito",
+        "sync_now": "Sincronizar",
+        "last_synced": "Última atualização:",
+        "analytics_title": "Análises de Vídeo & Insights",
+        "tab_overview": "Visão Geral",
+        "tab_videos": "Vídeos",
+        "no_videos_title": "Nenhum Vídeo Disponível",
+        "no_videos_desc": "Não foi possível carregar os vídeos deste canal. Motivos possíveis:",
+        "no_videos_reason_1": "O canal ainda não foi sincronizado",
+        "no_videos_reason_2": "O endpoint do backend não está configurado",
+        "no_videos_reason_3": "O canal não possui vídeos publicados",
+        "no_videos_found": "Nenhum vídeo encontrado",
+        "check_log": "Verifique o console (F12) para logs detalhados",
+        "stat_total_views": "Visualizações Totais",
+        "stat_avg_views": "Média de Views",
+        "stat_total_likes": "Total de Likes",
+        "stat_engagement": "Engajamento",
+        "top_performing": "Vídeo com Melhor Desempenho",
+        "show_less": "Mostrar menos",
+        "show_more": "Mostrar mais",
+        "watch": "Assistir",
+        "stats_likes": "curtidas",
+        "stats_comments": "comentários"
+    },
     "personas": {
         "library_title": "Biblioteca de Personas",
         "library_subtitle": "Escolha o estilo do seu roteirista de IA ou converse diretamente com ele",
