feat: introduce i18n, project creation and script management UI, and project action hook.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -215,7 +215,10 @@
         "no_characters_found": "No characters found",
         "clear_all": "Clear all",
         "default_character": "Default",
-        "selected_count": "{{count}} selected"
+        "selected_count": "{{count}} selected",
+        "auto_reuse": "AUTO REUSE",
+        "always_new": "ALWAYS NEW",
+        "asset_reuse_strategy": "Asset Reuse Strategy"
     },
     "scene": {
         "regenerate_title": "Regenerate {{type}}?",
